--- a/app/globals.css
+++ b/app/globals.css
@@ -23,4 +23,7 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  direction: rtl;
 }
+
+@import "leaflet/dist/leaflet.css";
